[package]
name = "thread-id"
version = "4.0.0"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]
license = "MIT/Apache-2.0"
readme = "readme.md"
keywords = ["thread", "pthread", "getcurrentthreadid"]
description = "Get a unique thread ID"
repository = "https://github.com/ruuda/thread-id"
documentation = "https://docs.rs/thread-id"

[badges]
travis-ci = { repository = "ruuda/thread-id", branch = "v4.0.0" }
appveyor = { repository = "ruuda/thread-id-y5v5o", branch = "v4.0.0" }

[target.'cfg(unix)'.dependencies]
libc = "0.2.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi"] }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.2"
